# Computer-Graphics-Playground

./: CMakeLists.txt  FloorOnly.cpp  README.md  floor.cpp  main.c  main.cpp
Resources/Models/: Ball.mtl
